Changed package.json license and pull artifact from hosting version

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io.git"
   },
   "author": "WylieYYYY",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "bugs": {
     "url": "https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io/issues"
   },
