Using EJS templating and fixed unsupported prompt

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io#readme",
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "ejs": "^3.1.5",
+    "glob": "^7.1.6"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
