--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "ejs": "^3.1.5",
-    "glob": "^7.1.6"
+    "glob": "^7.1.6",
+    "markdown-it": "^12.0.4",
+    "markdown-it-imsize": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
