--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "ejs": "^3.1.5",
     "glob": "^7.1.6",
+    "highlight.js": "^10.7.1",
     "markdown-it": "^12.0.4",
     "markdown-it-imsize": "^2.0.1"
   },
