--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ pages:
     script:
         - npm i
         - npm run build
+        - find public -type f -regex '.*\.\(html\|js\|css\)$' -exec gzip -k {} \;
     artifacts:
         paths:
             - public
