--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "ejs": "^3.1.5",
     "glob": "^7.1.6",
     "highlight.js": "^10.7.1",
     "markdown-it": "^12.0.4",
     "markdown-it-imsize": "^2.0.1",
+    "node-sass": "^5.0.0",
     "sharp": "^0.28.1"
   },
   "devDependencies": {
