minimize projects page CSS, maximize accessibility, best practices, and SEO score

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build:
     script:
         - npm i
         - npm run build
-        - find public -type f -regex '.*\.\(css\|html\|js\|json\)$' -exec gzip -k {} \;
+        - find public -type f -regex '.*\.\(css\|html\|js\|json\|svg\)$' -exec gzip -k {} \;
     artifacts:
         paths:
             - public
