--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Personal website.",
   "scripts": {
-    "test": "node node_modules/eslint/bin/eslint.js *.js public/*.js --ignore-path .gitignore",
+    "test": "node node_modules/eslint/bin/eslint.js *.js data/*.js --ignore-path .gitignore",
     "build": "node setup.js"
   },
   "repository": {
@@ -23,11 +23,13 @@
     "ejs": "^3.1.5",
     "glob": "^7.1.6",
     "highlight.js": "^10.7.1",
+    "html-minifier": "^4.0.0",
     "markdown-it": "^12.0.4",
     "markdown-it-imsize": "^2.0.1",
     "purgecss": "^4.0.3",
     "sass": "^1.32.12",
-    "sharp": "^0.28.1"
+    "sharp": "^0.28.1",
+    "uglify-js": "^3.13.5"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
