--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Personal website.",
   "scripts": {
-    "test": "node node_modules/eslint/bin/eslint.js *.js data/*.js --ignore-path .gitignore",
+    "test": "node node_modules/eslint/bin/eslint.js *.js data/pages/*.js --ignore-path .gitignore",
     "build": "node setup.js"
   },
   "repository": {
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "clean-css": "^5.1.2",
+    "directory-tree": "^3.2.2",
     "ejs": "^3.1.5",
     "glob": "^7.1.6",
     "highlight.js": "^10.7.1",
