--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ public/*
 !public/styles/
 !public/index.html
 !public/robots.txt
-public/styles/styles.css
+public/styles/*.css
 public/styles/webp/*.webp
