--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Personal website.",
   "scripts": {
-    "test": "node node_modules/eslint/bin/eslint.js *.js data/pages/*.js --ignore-path .gitignore",
+    "test": "node node_modules/eslint/bin/eslint.js *.js data/pages/*.js --ignore-pattern 'public/*'",
     "build": "node setup.js"
   },
   "repository": {
@@ -17,23 +17,24 @@
   },
   "homepage": "https://gitlab.com/WylieYYYY/wylieyyyy.gitlab.io#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "clean-css": "^5.1.2",
-    "directory-tree": "^3.2.2",
-    "ejs": "^3.1.5",
-    "glob": "^7.1.6",
-    "highlight.js": "^10.7.1",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "clean-css": "^5.3.3",
+    "directory-tree": "^3.5.2",
+    "ejs": "^3.1.10",
+    "glob": "^11.0.0",
+    "highlight.js": "^11.11.1",
     "html-minifier": "^4.0.0",
-    "markdown-it": "^12.0.4",
+    "markdown-it": "^14.1.0",
     "markdown-it-imsize": "^2.0.1",
-    "purgecss": "^4.0.3",
-    "sass": "^1.32.12",
-    "sharp": "^0.28.1",
-    "uglify-js": "^3.13.5"
+    "purgecss": "^7.0.2",
+    "sass": "^1.83.0",
+    "sharp": "^0.33.5",
+    "uglify-js": "^3.19.3"
   },
   "devDependencies": {
-    "eslint": "^7.5.0",
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
     "eslint-config-google": "^0.14.0"
   }
 }
